raw/rust-encoding-0.3.0--2016-11-11-04-24-18--3.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./rust-encoding-0.3.0
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling encoding v0.3.0-dev (file:///root/benchmarks/rust-encoding-0.3.0)
time: 0.017; rss: 45MB	parsing
Lines of code:             5757
Pre-expansion node count:  26523
time: 0.000; rss: 45MB	recursion limit
time: 0.000; rss: 45MB	crate injection
time: 0.000; rss: 45MB	plugin loading
time: 0.000; rss: 45MB	plugin registration
time: 0.031; rss: 74MB	expansion
time: 0.000; rss: 74MB	maybe building test harness
time: 0.000; rss: 74MB	maybe creating a macro crate
Post-expansion node count: 37888
time: 0.000; rss: 74MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 74MB	complete gated feature checking
time: 0.001; rss: 74MB	early lint checks
time: 0.000; rss: 74MB	AST validation
time: 0.004; rss: 74MB	name resolution
time: 0.003; rss: 77MB	lowering ast -> hir
time: 0.000; rss: 77MB	indexing hir
time: 0.000; rss: 77MB	attribute checking
time: 0.000; rss: 76MB	language item collection
time: 0.000; rss: 76MB	lifetime resolution
time: 0.000; rss: 76MB	looking for entry point
time: 0.000; rss: 76MB	looking for plugin registrar
time: 0.002; rss: 78MB	region resolution
time: 0.000; rss: 78MB	loop checking
time: 0.000; rss: 78MB	static item recursion checking
time: 0.013; rss: 79MB	compute_incremental_hashes_map
time: 0.000; rss: 79MB	load_dep_graph
time: 0.007; rss: 80MB	type collecting
time: 0.000; rss: 80MB	variance inference
time: 0.008; rss: 80MB	coherence checking
time: 0.010; rss: 80MB	wf checking
time: 0.010; rss: 81MB	item-types checking
time: 0.110; rss: 86MB	item-bodies checking
time: 0.000; rss: 86MB	drop-impl checking
time: 0.008; rss: 86MB	const checking
time: 0.001; rss: 86MB	privacy checking
time: 0.000; rss: 86MB	stability index
time: 0.001; rss: 86MB	intrinsic checking
time: 0.000; rss: 86MB	effect checking
time: 0.004; rss: 86MB	match checking
time: 0.001; rss: 86MB	liveness checking
time: 0.005; rss: 86MB	rvalue checking
time: 0.018; rss: 93MB	MIR dump
  time: 0.002; rss: 93MB	SimplifyCfg
  time: 0.003; rss: 93MB	QualifyAndPromoteConstants
  time: 0.004; rss: 93MB	TypeckMir
  time: 0.000; rss: 93MB	SimplifyBranches
  time: 0.001; rss: 93MB	SimplifyCfg
time: 0.011; rss: 93MB	MIR cleanup and validation
time: 0.017; rss: 93MB	borrow checking
time: 0.000; rss: 93MB	reachability checking
time: 0.001; rss: 93MB	death checking
time: 0.001; rss: 93MB	stability checking
time: 0.000; rss: 93MB	unused lib feature checking
time: 0.013; rss: 93MB	lint checking
time: 0.000; rss: 93MB	resolving dependency formats
  time: 0.000; rss: 93MB	NoLandingPads
  time: 0.001; rss: 93MB	SimplifyCfg
  time: 0.002; rss: 93MB	EraseRegions
  time: 0.000; rss: 93MB	AddCallGuards
  time: 0.022; rss: 95MB	ElaborateDrops
  time: 0.000; rss: 95MB	NoLandingPads
  time: 0.002; rss: 95MB	SimplifyCfg
  time: 0.001; rss: 95MB	InstCombine
  time: 0.001; rss: 95MB	Deaggregator
  time: 0.000; rss: 95MB	CopyPropagation
  time: 0.001; rss: 95MB	SimplifyLocals
  time: 0.000; rss: 95MB	AddCallGuards
  time: 0.000; rss: 95MB	PreTrans
time: 0.031; rss: 95MB	MIR optimisations
  time: 0.004; rss: 95MB	write metadata
  time: 0.143; rss: 175MB	translation item collection
  time: 0.003; rss: 175MB	codegen unit partitioning
  time: 0.003; rss: 202MB	internalize symbols
time: 0.392; rss: 202MB	translation
time: 0.000; rss: 202MB	assert dep graph
time: 0.000; rss: 202MB	serialize dep graph
  time: 0.026; rss: 114MB	llvm function passes [0]
  time: 0.056; rss: 118MB	llvm module passes [0]
  time: 0.624; rss: 124MB	codegen passes [0]
  time: 0.000; rss: 124MB	codegen passes [0]
time: 0.761; rss: 123MB	LLVM passes
time: 0.000; rss: 123MB	serialize work products
time: 0.039; rss: 93MB	linking
done
